# prototype-201

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE.md  README.md  build-cmake.sh  build-make.sh  build-xcode.sh  build.sh  clean.sh  dependencies.vcpkg  unix_build.sh  xcode_build.sh
assets/entities/: platform.xml  player.xml
assets/shaders/: fragment.frag  shader.frag  shader.vert  vertex.vert
cmake/: CMakeCache.txt  FindSDL2.cmake  FindSDL2_gfx.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake  FindTBB.cmake
docs/: DOCUMENTATION.md
engine/: CMakeLists.txt
entities/: healthbar.xml  platform.xml  player.xml
libraries/__common/: CMakeLists.txt  __common.hpp
libraries/__common/source/: decls.hpp
libraries/asset/: CMakeLists.txt  asset.hpp
libraries/asset/source/: sprite.cpp  sprite.hpp
libraries/common/: CMakeLists.txt
libraries/common/source/: __common.cpp
libraries/core/: CMakeLists.txt
libraries/core/source/: window.hpp
libraries/ecs/: CMakeLists.txt
libraries/ecs/source/: entity.hpp
libraries/event/: CMakeLists.txt
libraries/event/source/: event.hpp  manager.hpp
libraries/game/: CMakeLists.txt
libraries/input/: CMakeLists.txt
libraries/physx/: CMakeLists.txt
libraries/ui/: CMakeLists.txt
libraries/util/: CMakeLists.txt  util.hpp
scripts/: build.sh  configure.sh  docs.sh  initialize.sh  make.sh  xcode.sh
source/: core.hpp  ecs.hpp  main.cpp  ui.hpp  util.hpp
source/asset/: CMakeLists.txt  serialize.cpp  serialize.hpp  sprite.hpp
source/asset/source/: serialize.cpp  serialize.hpp  sprite.cpp  sprite.hpp
source/common/: CMakeLists.txt  __common.hpp
source/common/common/: __common.cpp  __common.hpp  decls.hpp
source/common/source/: __common.hpp  decls.hpp
source/core/: CMakeLists.txt  core.hpp  engine.hpp  world.cpp
source/ecs/: CMakeLists.txt  ecs.hpp
source/engine/: CMakeLists.txt  engine.hpp
source/engine/engine/: __common.hpp  asset.hpp  core.hpp  event.hpp  graphics-api.hpp  input.hpp  math.hpp  media-layer.hpp  physx.hpp  util.hpp
source/engine/engine/__common/: __common.hpp
source/engine/engine/asset/: entities.cpp  entities.hpp  serialize.cpp  serialize.hpp  sprite.cpp  sprite.hpp  textures.cpp  textures.hpp
source/engine/engine/core/: engine.cpp  engine.hpp  window.cpp  window.hpp  world.cpp  world.hpp
source/engine/engine/ecs/: entity.hpp
source/engine/engine/ecs/component/: component.cpp  component.hpp  manager.cpp  manager.hpp
source/engine/engine/ecs/entity/: entity.cpp  entity.hpp  entity.impl.hpp  manager.cpp  manager.hpp
source/engine/engine/ecs/system/: system.cpp  system.hpp
source/engine/engine/event/: event.cpp  event.hpp  manager.cpp  manager.hpp
source/engine/engine/graphics-api/: graphics-api.cpp  graphics-api.hpp
source/engine/engine/input/: input.cpp  input.hpp
source/engine/engine/math/: math.cpp  math.hpp
source/engine/engine/media-layer/: media-layer.cpp  media-layer.hpp
source/engine/engine/physx/: physx.cpp  physx.hpp
source/engine/engine/ui/: healthbar.hpp
source/engine/engine/util/: clock.hpp  exception.cpp  exception.hpp  linalg.cpp  linalg.hpp  util.cpp  util.hpp
source/event/: CMakeLists.txt  event.hpp  manager.hpp
source/game/: CMakeLists.txt  camera.hpp  game.hpp
source/game/components/: animation.hpp  attack.hpp  health.hpp  hud.hpp  physics.hpp  render.hpp  transform.hpp
source/game/game/: camera.hpp  components.hpp  events.hpp  game.hpp
source/game/game/components/: animation.hpp  attack.hpp  camera_focus.hpp  character.hpp  health.hpp  hud.hpp  input.hpp  physics.hpp  render.hpp  transform.hpp
source/game/game/events/: animation.hpp  attack.hpp
source/game/game/game/: game.cpp  game.hpp
source/game/game/systems/: animation.cpp  animation.hpp  character.cpp  character.hpp  combat.cpp  combat.hpp  input.cpp  input.hpp  physics.cpp  physics.hpp  render.cpp  render.hpp
source/game/source/: camera.hpp
source/game/source/components/: animation.hpp  attack.hpp  camera_focus.hpp  character.hpp  health.hpp  hud.hpp  input.hpp  physics.hpp  render.hpp  transform.hpp
source/game/source/systems/: animation.cpp  animation.hpp  character.hpp  combat.cpp  combat.hpp  input.cpp  input.hpp  physics.cpp  physics.hpp  render.cpp  render.hpp
source/game/systems/: animation.hpp  character.hpp  combat.cpp  combat.hpp  input.cpp  physics.cpp  physics.hpp  render.hpp
source/input/: CMakeLists.txt  input.cpp  input.hpp  input_enum.hpp
source/physx/: CMakeLists.txt  physx.hpp
source/ui/: CMakeLists.txt  healthbar.hpp  hud.hpp  ui.hpp
source/util/: CMakeLists.txt
source/vulkan/: CMakeLists.txt  vulkan.hpp
src/: __common.hpp  array.hpp  asset.hpp  camera.hpp  clock.hpp  collision_system.cpp  collision_system.hpp  component.cpp  component.hpp  component_manager.cpp  component_manager.hpp  core_engine.hpp  decls.hpp  ecs_common.hpp  engine.cpp  engine.hpp  entity.cpp  entity.hpp  entity_manager.cpp  entity_manager.hpp  event.cpp  event.hpp  event_bus.hpp  exception.cpp  exception.hpp  filesystem.cpp  filesystem.hpp  game.cpp  game.hpp  game_object.hpp  hitbox.cpp  hitbox.hpp  input.cpp  input.hpp  input_enum.hpp  input_system.cpp  input_system.hpp  key.hpp  linalg.hpp  main.cpp  (+33 more)
src/array/: array_base.hpp  st_array_base.hpp  st_table.hpp  table.hpp
src/asset/: sprite.hpp
src/component/: component.hpp  manager.cpp  manager.hpp
src/core/: engine.cpp  window.hpp  world.hpp
src/ecs/: component.hpp
src/event/: event.hpp  manager.hpp
src/game/: systems.hpp
src/input/: input.hpp
src/physx/: physx.cpp
src/point/: point_2.hpp  point_3.hpp  point_base.hpp
src/system/: animation.cpp  animation.hpp  camera.cpp  camera.hpp  character.cpp  character.hpp  collision.cpp  collision.hpp  combat.cpp  combat.hpp  input.cpp  input.hpp  movement.cpp  movement.hpp  physics.cpp  physics.hpp  render.cpp  render.hpp  system.cpp  system.hpp
src/ui/: healthbar.hpp
src/util/: exception.hpp  linalg.hpp  util.hpp
src/vector/: vector_2.hpp  vector_3.hpp  vector_4.hpp  vector_base.hpp
(+61 files in other folders)
